thisincludedir = $(pkgincludedir)/proto

thisinclude_HEADERS = \
	ftp.h \
	http.h \
	cap.h \
	tcp.h \
	proto.h \
	arp.h \
	sdp.h \
	udp.h \
	bittorrent.h \
	eth.h \
	dns.h \
	icmp.h \
	rtp.h \
	netbios.h \
	ip.h \
	gre.h \
	ssl.h \
	cifs.h \
	mgcp.h \
	rtcp.h \
	sip.h \
	sql.h \
	port_muxer.h \
	pkt_wait_list.h \
	streambuf.h \
	cursor.h \
	cnxtrack.h \
	serialize.h

