thisincludedir = $(pkgincludedir)/proto

thisinclude_HEADERS = \
	ftp.h \
	http.h \
	cap.h \
	tcp.h \
	proto.h \
	arp.h \
	sdp.h \
	udp.h \
	eth.h \
	dns.h \
	icmp.h \
	rtp.h \
	netbios.h \
	ip.h \
	gre.h \
	cifs.h \
	mgcp.h \
	rtcp.h \
	sip.h \
	sql.h \
	tls.h \
	port_muxer.h \
	pkt_wait_list.h \
	streambuf.h \
	cursor.h \
	cnxtrack.h \
	serialize.h \
	capfile.h \
	os-detect.h \
	discovery.h \
	deduplication.h \
	erspan.h \
	ber.h \
	skinny.h
