thisincludedir = $(pkgincludedir)/tools

thisinclude_HEADERS = \
	ext.h \
	mutex.h \
	files.h \
	mallocer.h \
	tempstr.h \
	hash.h \
	miscmacs.h \
	ip_addr.h \
	timeval.h \
	queue.h \
	log.h \
	redim_array.h \
	cli.h \
	ref.h \
	sock.h \
	serialization.h \
	netflow.h \
	objalloc.h \
	proto.h \
	bench.h \
	proto_stack.h \
	term.h

